MDEV-6572 "USE dbname" with a bad sequence erroneously connects to a wrong database